--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
+    "@ionic-native/call-number": "^5.31.1",
+    "@ionic-native/core": "^5.31.1",
     "@ionic/cli": "^6.13.1",
     "@ionic/react": "^5.5.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "@zoomus/websdk": "^1.9.0",
+    "call-number": "^1.0.1",
     "ionic": "^5.4.16",
+    "ionic-native": "^2.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ionicons": "^4.2.0",
