--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "call-number": "^1.0.1",
     "ionic": "^5.4.16",
     "ionic-native": "^2.9.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ionicons": "^4.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
